--- a/Client/Controls/Teams/MeetingNavigation.xaml
+++ b/Client/Controls/Teams/MeetingNavigation.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d"
              d:DesignHeight="50" d:DesignWidth="800"
              Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}"
-             Background="{StaticResource BrushPrimary1}">
+             Background="{StaticResource MahApps.Brushes.Gray2}">
     <Grid>
         <Grid.Resources>
             <Style BasedOn="{StaticResource MahApps.Styles.Button.MetroSquare}" TargetType="Button" />
