--- a/Client/MainWindow.xaml
+++ b/Client/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="Planning Poker"
         Height="450" Width="800"
         MinHeight="400" MinWidth="650"
-        BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
+        BorderBrush="{DynamicResource MahApps.Brushes.Gray2}"
         BorderThickness="1">
     <Grid>
         <Grid.ColumnDefinitions>
