--- a/Client/Styles/CalendarStyle.xaml
+++ b/Client/Styles/CalendarStyle.xaml
@@ -27,10 +27,10 @@
         </Setter>
         <Setter Property="CalendarDayButtonStyle" Value="{StaticResource StyleCalandarDayButton}" />
         <Setter Property="CalendarButtonStyle" Value="{StaticResource StyleCalandarButton}" />
-        <Setter Property="Foreground" Value="{StaticResource MahApps.Brushes.Accent}" />
+        <Setter Property="Foreground" Value="{StaticResource MahApps.Brushes.Gray3}" />
         <Setter Property="Background">
             <Setter.Value>
-                <SolidColorBrush Color="{StaticResource MahApps.Colors.Accent}"/>
+                <SolidColorBrush Color="{StaticResource MahApps.Colors.Gray2}"/>
             </Setter.Value>
         </Setter>
         <Setter Property="BorderThickness" Value="0" />
