--- a/Client/Views/HomeView.xaml
+++ b/Client/Views/HomeView.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:Client.Views"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
-             Background="{StaticResource MahApps.Brushes.Accent4}">
+             Background="{StaticResource MahApps.Brushes.Gray1}"
+             Foreground="{StaticResource MahApps.Brushes.Gray10}">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -32,7 +33,7 @@
                        Text="Your last tasks: " />
 
             <ListView Grid.Row="1" Margin="8"
-                      Background="{StaticResource MahApps.Brushes.Accent3}" ItemsSource="{Binding Tasks}">
+                      Background="{StaticResource MahApps.Brushes.Gray2}" ItemsSource="{Binding Tasks}">
                 <ListView.View>
                     <GridView>
                         <GridView.Columns>
