--- a/Client/Views/JoinTeamView.xaml
+++ b/Client/Views/JoinTeamView.xaml
@@ -8,8 +8,9 @@
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:notifications="clr-namespace:Notifications.Wpf.Core.Controls;assembly=Notifications.Wpf.Core"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="{StaticResource MahApps.Brushes.Accent4}">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Foreground="{StaticResource MahApps.Brushes.Gray10}">
+    <Grid Background="{StaticResource MahApps.Brushes.Gray1}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
