--- a/Client/Views/Teams/CreateView.xaml
+++ b/Client/Views/Teams/CreateView.xaml
@@ -8,7 +8,7 @@
              xmlns:controls="clr-namespace:Notifications.Wpf.Core.Controls;assembly=Notifications.Wpf.Core"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="{StaticResource MahApps.Brushes.Accent4}">
+    <Grid Background="{StaticResource MahApps.Brushes.Gray1}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
@@ -105,7 +105,7 @@
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Right"
                         Content="Cancel"
-                        Background="{StaticResource MahApps.Brushes.Accent}"
+                        Background="{StaticResource MahApps.Brushes.Gray2}"
                         Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}"
                         Padding="10"
                         Margin="6"
@@ -115,7 +115,7 @@
                         VerticalAlignment="Bottom"
                         HorizontalAlignment="Right"
                         Content="Create meeting"
-                        Background="{StaticResource MahApps.Brushes.Accent}"
+                        Background="{StaticResource MahApps.Brushes.Gray2}"
                         Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}"
                         Padding="10"
                         Margin="6"
