--- a/Client/Views/Teams/ResultsView.xaml
+++ b/Client/Views/Teams/ResultsView.xaml
@@ -7,10 +7,11 @@
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800"
-             Background="{StaticResource MahApps.Brushes.Accent4}">
+             Background="{StaticResource MahApps.Brushes.Gray1}"
+             Foreground="{StaticResource MahApps.Brushes.Gray10}">
     <Grid>
         <ListView Grid.Row="0" Margin="8"
-                  Background="{StaticResource MahApps.Brushes.Accent3}">
+                  Background="{StaticResource MahApps.Brushes.Gray1}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="User" Width="150" />
@@ -19,5 +20,19 @@
                 </GridView>
             </ListView.View>
         </ListView>
+
+
+        <!-- <ListView Grid.Row="0" Margin="8" -->
+        <!--           Background="{StaticResource MahApps.Brushes.Accent3}" ItemsSource="{Binding Tasks}"> -->
+        <!--     <ListView.View> -->
+        <!--         <GridView> -->
+        <!--             <GridView.Columns> -->
+        <!--                 <GridViewColumn Header="Time" Width="Auto" DisplayMemberBinding="{Binding EstimatedTime}" /> -->
+        <!--                 <GridViewColumn Header="Team Name" Width="Auto" DisplayMemberBinding="{Binding TeamName}" /> -->
+        <!--                 <GridViewColumn Header="Description" Width="auto" DisplayMemberBinding="{Binding Description}" /> -->
+        <!--             </GridView.Columns> -->
+        <!--         </GridView> -->
+        <!--     </ListView.View> -->
+        <!-- </ListView> -->
     </Grid>
 </UserControl>
