--- a/Client/Views/Game/AdminGameWindow.xaml
+++ b/Client/Views/Game/AdminGameWindow.xaml
@@ -15,96 +15,74 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <question:GameBase Grid.Row="0" />
+        <TextBlock Grid.Row="0"
+                   TextWrapping="Wrap"
+                   Name="Task"
+                   Text="{Binding QuestionText, UpdateSourceTrigger=PropertyChanged}"
+                   HorizontalAlignment="Center" FontSize="22" />
 
         <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
 
-            <Grid Grid.Column="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-                <TextBlock Grid.Row="0"
-                           Margin="8"
-                           Text="Round ended:"
-                           FontSize="18" />
+            <TextBlock Grid.Row="0"
+                       Margin="8"
+                       Text="Round ended:"
+                       FontSize="18" />
 
-                <TextBox Grid.Row="1"
-                         Margin="8"
-                         mah:TextBoxHelper.ClearTextButton="True"
-                         mah:TextBoxHelper.Watermark="Write number"
-                         Name="AnswerFilter" />
+            <TextBox Grid.Row="1"
+                     Margin="8"
+                     mah:TextBoxHelper.ClearTextButton="True"
+                     mah:TextBoxHelper.Watermark="Write number"
+                     Name="AnswerFilter" />
 
-                <ListView Grid.Row="2" Margin="8">
-                    <ListView Name="RoundEndedList">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Name" Width="100" />
-                                <GridViewColumn Header="Value" Width="100" />
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                </ListView>
+            <ListView Grid.Row="2" Margin="8"
+                      Background="{StaticResource MahApps.Brushes.Gray2}"
+                      ItemsSource="{Binding Users}"
+                      Name="ListView">
+                <ListView.View>
+                    <GridView>
+                        <GridView.Columns>
+                            <GridViewColumn Header="Time" Width="Auto" DisplayMemberBinding="{Binding Email}" />
+                            <GridViewColumn Header="Team Name" Width="Auto" DisplayMemberBinding="{Binding EstimatedTime}" />
+                        </GridView.Columns>
+                    </GridView>
+                </ListView.View>
+            </ListView>
 
-                <Grid Grid.Row="3">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
+            <Grid Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
 
-                    <Button Grid.Column="0"
-                            Margin="8"
-                            Padding="10"
-                            Content="Rewind"
-                            VerticalAlignment="Bottom"
-                            HorizontalAlignment="Right"
-                            Background="{StaticResource MahApps.Brushes.Gray2}"
-                            Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}" />
+                <Button Grid.Column="0"
+                        Margin="8"
+                        Padding="10"
+                        Content="Rewind"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Right"
+                        Background="{StaticResource MahApps.Brushes.Gray2}"
+                        Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}" />
 
-                    <Button Grid.Column="1"
-                            Margin="8"
-                            Padding="10"
-                            Content="Choose winner"
-                            VerticalAlignment="Bottom"
-                            HorizontalAlignment="Right"
-                            Background="{StaticResource MahApps.Brushes.Gray2}"
-                            Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}" />
-
-                </Grid>
-
+                <Button Grid.Column="1"
+                        Margin="8"
+                        Padding="10"
+                        Content="Choose winner"
+                        Click="ButtonBase_OnClick"
+                        VerticalAlignment="Bottom"
+                        HorizontalAlignment="Right"
+                        Background="{StaticResource MahApps.Brushes.Gray2}"
+                        Foreground="{StaticResource MahApps.Brushes.Badged.Foreground}" />
 
             </Grid>
 
-            <Grid Grid.Column="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-
-                <TextBlock Grid.Row="0"
-                           Margin="8"
-                           Text="In the game"
-                           FontSize="18" />
-
-                <ListView Grid.Row="1" Margin="8">
-                    <ListView Name="PlayersInGame">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Name" Width="200" />
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                </ListView>
-
-            </Grid>
 
         </Grid>
 
