User question text bug fix

--- a/Client/Views/Game/UserGameWindow.xaml
+++ b/Client/Views/Game/UserGameWindow.xaml
@@ -19,7 +19,7 @@
 
         <TextBlock Grid.Row="0"
                    TextWrapping="Wrap"
-                   Name="Task"
+                   Name="Question"
                    Text="{Binding QuestionText, UpdateSourceTrigger=PropertyChanged}"
                    HorizontalAlignment="Center" FontSize="22" />
 
